--- a/client.html
+++ b/client.html
@@ -11,7 +11,16 @@
                     Balance: <span id="balance"></span>
                 </div>
                 <p/>
-                <div id="agreement">
+                <div>
+                    <button id="refreshbalance">Refresh Balance</button>
+                </div>
+                <p/>
+                <div>
+                    Agreement: <span id="agreement"></span>
+                </div>
+                <p/>
+                <div>
+                    <button id="refresh">Refresh Agreement</button>
                 </div>
                 <p/>
                 <div>
@@ -21,6 +30,15 @@
                 <p/>
                 <div>
                     <button id="signbutton">Sign</button>
+                </div>
+            </div>
+            <p/>
+            <div>
+                Create New Agreement:
+                <p/>
+                <div>
+                    <input id="agreementInput" placeholder="Agreement"/>
+                    <button id="agreementButton">Create</button>
                 </div>
             </div>
         </div>
